package bigtalkdesignMod.v15.v15_4;

public interface IDepartment {
    public void insert(Department department);

    public Department getDepartment(int id);
}
