package bigtalkdesignMod.v15.v15_4;

public interface IFactory {

    public IUser createUser();

    public IDepartment createDepartment();
}
