package bigtalkdesignMod.v15.v15_4;

public interface IUser {
    public void insert(User user);

    public User getUser(int id);
}
